# dbfind

./: .gitignore  README.md  package-lock.json  package.json
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/adapters/: ai_adapter.py
apps/api/app/api/: router.py
apps/api/app/core/: config.py
apps/api/app/repositories/: agent_task_repository.py  collection_repository.py  column_repository.py  file_repository.py  query_repository.py  sheet_repository.py  (+3 more)
apps/api/tests/: conftest.py  test_agent_execution_service.py  test_agent_plan_validator.py  test_agent_router.py  test_agent_routes.py  test_agent_runtime.py  test_agent_service.py  test_agent_task_repository.py  test_agent_tools.py  test_ai_adapter_errors.py  test_app_config.py  test_bulk_upload.py  test_collection_name_parser.py  test_collection_repository.py  test_collection_service.py  test_excel_cell_grid.py  test_excel_loader_csv.py  test_excel_loader_headers.py  test_excel_operation_engine.py  test_excel_parse_quality.py  test_excel_structure_detector.py  test_excel_structure_pipeline.py  test_excel_table_block_detector.py  test_file_service_import.py  test_query_catalog_attempts.py  test_query_routes.py  test_query_sources.py  test_schema_collection_context.py  test_settings_service.py  test_sheet_renderer.py  test_sql_guard.py  test_structure_plan_extractor.py  test_structure_preview_routes.py  test_table_catalog.py  test_table_metadata_extractor.py  test_table_structure_plan.py  test_upload_session_routes.py  test_upload_session_service.py  test_vision_structure_planner.py
(+96 files in other folders)
