[project]
name = "dbfind-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "duckdb",
  "fastapi",
  "httpx",
  "odfpy",
  "openpyxl",
  "openai-agents>=0.17.5,<0.18",
  "pandas",
  "Pillow",
  "pydantic",
  "pydantic-settings",
  "pyxlsb",
  "python-multipart",
  "xlrd",
  "XlsxWriter",
  "uvicorn"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff"
]
advanced-excel = [
  "polars",
  "pyjanitor"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["app*"]
